# trilinos-docker

./: .gitignore  CODEOWNERS  README.md  build-container.sh  delete-container.sh  run-container.sh
configure-files/: Galeri_Exception.h  do-configure-trilinos.sh
dockerfiles/: trilinos_demo
exercises/: README.md
exercises/ex_01_cmake/: README.md
exercises/ex_01_cmake/src/: CMakeLists.txt  main.cpp
exercises/ex_01_configure/: README.md
exercises/ex_02_assemble/: README.md  do-configure-ex-02
exercises/ex_02_assemble/src/: CMakeLists.txt  main.cpp
exercises/ex_03_solve/: README.md
exercises/ex_03_solve/src/: CMakeLists.txt  main.cpp  utils.hpp
solutions/ex_01_cmake/: do-configure-ex-01-cmake
solutions/ex_01_cmake/src/: CMakeLists.txt  main.cpp
solutions/ex_01_configure/: do-configure-trilinos
solutions/ex_02_assemble/: do-configure-ex-02
solutions/ex_02_assemble/src/: CMakeLists.txt  main.cpp
solutions/ex_03_solve/src/: main.cpp
